# cvgen

./: .gitignore  README.md  pyproject.toml
.claude/skills/spec-workflow/: SKILL.md
cvgen/: cli.py
cvgen/utils/: filter_by_tags.py  filter_by_verbosity.py  filter_compound.py
examples/basic_ko/: Makefile  README.md  classicko  extended_template.yaml
specs/: 251024-195327-rendercv-2.0-upgrade.md
src/cvgen/: cli.py  yaml_handler.py
src/cvgen/utils/: collapse.py  unwrap.py
static/themes/classicko/: BulletEntry.j2.typ  EducationEntry.j2.typ  Header.j2.typ  NormalEntry.j2.typ  NumberedEntry.j2.typ  OneLineEntry.j2.typ  Preamble.j2.tex  Preamble.j2.typ  PublicationEntry.j2.typ  ReversedNumberedEntry.j2.typ  SectionBeginning.j2.typ  SectionEnding.j2.typ  TextEntry.j2.typ  __init__.py
tests/: test_collapse.py  test_filter_by_tags.py  test_filter_by_verbosity.py  test_filter_compound.py
