[project]
name = "cvgen"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "John Choi", email = "5154439+isnbh0@users.noreply.github.com"},
]
dependencies = [
    "rendercv>=1.13",
    "pyyaml>=6.0.1",
    "deepdiff>=7.0.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.5.6",
]
test = [
    "pytest>=8.3.2",
]
