[project]
name = "cvgen"
version = "0.2.0"
description = "CV generating tool built on top of rendercv"
authors = [
    { name = "John Choi", email = "5154439+isnbh0@users.noreply.github.com" },
]
requires-python = ">=3.12.4"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "deepdiff>=7.0.1",
    "pyyaml>=6.0.1",
    "rendercv>=1.13,<2",
    "ruamel-yaml>=0.18.6",
]

[project.scripts]
cvgen = "cvgen.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.isort]
known-first-party = ["cvgen"]
